# chew-tts

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.py  gemv_bench.py  run.sh
crates/engine/: Cargo.toml
crates/engine/examples/: cpu_moe_bench.rs  diffusion_generate.rs  diffusion_load.rs  gen_text.rs  inspect_mamba.rs  smoke.rs  tensors.rs  validate_chunked_gemm_multi.rs  validate_dequant.rs  validate_diffusion_mask.rs  validate_embedding.rs  validate_gemm.rs  validate_matmul_nt.rs  validate_mha.rs  validate_output_matmul.rs  validate_rmsnorm.rs  validate_rope.rs  vram_plan.rs
crates/engine/src/: config.rs  forward.rs  kv_cache.rs  lib.rs  sample.rs  vram_plan.rs  weights.rs
crates/engine/src/arch/: bert.rs  diffusion_gemma.rs  gemma4_common.rs  gemma4_dense.rs  gemma4_moe.rs  llama.rs  mamba.rs  mod.rs  streaming_dense.rs
crates/gguf/: Cargo.toml
crates/gguf/examples/: parse.rs  tokenize_prompt.rs  tokenizer_test.rs
crates/gguf/src/: lib.rs  parser.rs  quant.rs  tokenizer.rs  types.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: dequant.rs  fast_launch.rs  gemm.rs  gemv.rs  lib.rs  loader.rs  ops.rs  quant.rs  speaker.rs
crates/kernel/src/cuda/: dequant.cu  dequant.cubin  dequant.ptx  fix_glibc.h  gemv.cu  glibc_compat.h  nvcc_patched.sh  ops.cu  ops.cubin  ops.ptx  speaker.cu
crates/kernel/src/cuda/cuda_patched/: cublas_api.h  cufft.h  cuobjclient.h  cuobjtelem.h  cupti_activity.h  cupti_driver_cbid.h  cupti_profiler_target.h  cupti_version.h  curand.h  cusolver_common.h  cusparse.h  generated_cuda_meta.h  npp.h  nppdefs.h  nppi_color_conversion.h  nppi_filtering_functions.h  nppi_geometry_transforms.h  nppi_morphological_operations.h  nppi_statistics_functions.h  nppi_support_functions.h  npps_support_functions.h  nvjpeg.h
crates/kernel/src/cuda/cuda_patched/crt/: math_functions.h
crates/kernel/src/cuda/local_cuda/nvvm/: nvvm
crates/kernel/src/cuda/local_cuda/targets/x86_64-linux/include/: builtin_types.h  channel_descriptor.h  common_functions.h  cooperative_groups.h  cuComplex.h  cublas.h  cublasLt.h  cublasXt.h  cublas_api.h  cublas_v2.h  cuda.h  cudaEGL.h  cudaEGLTypedefs.h  cudaGL.h  cudaGLTypedefs.h  cudaProfiler.h  cudaProfilerTypedefs.h  cudaTypedefs.h  cudaVDPAU.h  cudaVDPAUTypedefs.h  cuda_awbarrier.h  cuda_awbarrier_helpers.h  cuda_awbarrier_primitives.h  cuda_bf16.h  cuda_bf16.hpp  cuda_device_runtime_api.h  cuda_egl_interop.h  cuda_fp16.h  cuda_fp16.hpp  cuda_fp4.h  cuda_fp4.hpp  cuda_fp6.h  cuda_fp6.hpp  cuda_fp8.h  cuda_fp8.hpp  cuda_gl_interop.h  cuda_occupancy.h  cuda_pipeline.h  cuda_pipeline_helpers.h  cuda_pipeline_primitives.h  (+142 more)
crates/kernel/src/cuda/local_cuda/targets/x86_64-linux/include/CL/: cl.h  cl.hpp  cl_egl.h  cl_ext.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  cl_version.h  opencl.h
crates/kernel/src/cuda/local_cuda/targets/x86_64-linux/include/Openacc/: cupti_openacc.h
crates/kernel/src/cuda/local_cuda/targets/x86_64-linux/include/Openmp/: cupti_openmp.h  omp-tools.h
crates/kernel/src/cuda/local_cuda/targets/x86_64-linux/include/cooperative_groups/: memcpy_async.h  reduce.h  scan.h
crates/kernel/src/cuda/local_cuda/targets/x86_64-linux/include/crt/: common_functions.h  cudacc_ext.h  device_double_functions.h  device_double_functions.hpp  device_fp128_functions.h  device_functions.h  device_functions.hpp  func_macro.h  host_config.h  host_defines.h  host_runtime.h  math_functions.hpp  mma.h  mma.hpp  nvfunctional  sm_100_rt.h  sm_100_rt.hpp  sm_70_rt.h  sm_70_rt.hpp  sm_80_rt.h  sm_80_rt.hpp  sm_90_rt.h  sm_90_rt.hpp  storage_class.h
crates/kernel/src/cuda/local_cuda/targets/x86_64-linux/include/nv/: target
crates/kernel/src/cuda/local_cuda/targets/x86_64-linux/include/nvtx3/: nvToolsExt.h  nvToolsExtCounters.h  nvToolsExtCuda.h  nvToolsExtCudaRt.h  nvToolsExtMem.h  nvToolsExtMemCudaRt.h  nvToolsExtOpenCL.h  nvToolsExtPayload.h  nvToolsExtSync.h  (+5 more)
crates/kernel/src/cuda/local_cuda/targets/x86_64-linux/lib/: libOpenCL.so.1  libOpenCL.so.1.0  libOpenCL.so.1.0.0  libcublas.so.13  libcublas.so.13.2.1.1  libcublasLt.so.13  libcublasLt.so.13.2.1.1  libcudart.so.13  libcudart.so.13.1.80  libcufft.so.12  libcufft.so.12.1.0.78  libcufftw.so.12  libcufftw.so.12.1.0.78  libcufile.so.0  libcufile.so.1.16.1  libcufile_rdma.so.1  libcufile_rdma.so.1.16.1  libcuobjclient.so.1  libcuobjclient.so.1.0.0  libcupti.so.13  libcupti.so.2025.4.1  libcurand.so.10  libcurand.so.10.4.1.81  libcusolver.so.12  libcusolver.so.12.0.9.81  libcusolverMg.so.12  libcusolverMg.so.12.0.9.81  libcusparse.so.12  libcusparse.so.12.7.3.1  libnppc.so.13  libnppc.so.13.0.3.3  libnppial.so.13  libnppial.so.13.0.3.3  libnppicc.so.13  libnppicc.so.13.0.3.3  libnppidei.so.13  libnppidei.so.13.0.3.3  libnppif.so.13  libnppif.so.13.0.3.3  libnppig.so.13  (+25 more)
crates/model-chatterbox/: Cargo.toml
crates/model-chatterbox/src/: cuda.rs  flow.rs  frontend.rs  hift.rs  lib.rs  s3gen.rs  tokenizer.rs
crates/model-kokoro/: Cargo.toml
crates/model-kokoro/src/: adain.rs  albert.rs  decoder.rs  f0.rs  generator.rs  generator_res.rs  lib.rs  lstm.rs  prosody.rs  text.rs
crates/model-qwen3-tts/: Cargo.toml
crates/model-qwen3-tts/src/: codec.rs  codec_encoder.rs  config.rs  cuda.rs  frontend.rs  lib.rs  precision.rs  predictor.rs  sampling.rs  speaker_encoder.rs
crates/model-qwen3-tts/src/cuda/: device.rs  stack.rs
crates/model-voxcpm2/: Cargo.toml
crates/model-voxcpm2/src/: backbone.rs  config.rs  decoder.rs  dit.rs  engine.rs  lib.rs  projections.rs
crates/safetensors/: Cargo.toml
crates/safetensors/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  ui.html
next/: Cargo.toml  README.md
next/crates/chew/: Cargo.toml
next/crates/chew-cuda/: Cargo.toml
next/crates/chew-cuda/src/: lib.rs
next/crates/chew-cuda/src/kernels/: kv_cache.cu
next/crates/chew-model-gemma4/: Cargo.toml
next/crates/chew-model-gemma4/src/: lib.rs
next/crates/chew-model-llama/: Cargo.toml
next/crates/chew-model-llama/src/: lib.rs
next/crates/chew-runtime/: Cargo.toml
next/crates/chew-runtime/src/: lib.rs
next/crates/chew/src/: main.rs
(+1861 files in other folders)
