[workspace]
resolver = "3"
members = [
    "crates/vram",
    "crates/kernel",
    "crates/tts-core",
    "crates/safetensors",
    "crates/model-qwen3-tts",
    "crates/model-kokoro",
    "crates/model-chatterbox",
    "crates/model-vibevoice",
    "crates/model-voxcpm2",
    "bin/chew-tts",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
chew-vram = { path = "crates/vram" }
chew-kernel = { path = "crates/kernel" }
chew-tts-core = { path = "crates/tts-core" }
chew-safetensors = { path = "crates/safetensors" }
chew-model-qwen3-tts = { path = "crates/model-qwen3-tts" }
chew-model-kokoro = { path = "crates/model-kokoro" }
chew-model-chatterbox = { path = "crates/model-chatterbox" }
chew-model-vibevoice = { path = "crates/model-vibevoice" }
chew-model-voxcpm2 = { path = "crates/model-voxcpm2" }

# CUDA
cudarc = { path = "cudarc-fork", features = ["std", "driver", "cublas", "nvrtc", "cuda-12060", "f16"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = "2"
safetensors = "0.6"

# Tokenizer
tokenizers = "0.22"
unicode-normalization = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
half = { version = "2", features = ["num-traits"] }
byteorder = "1"
memmap2 = "0.9"
parking_lot = "0.12"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
hound = "3.5"
rustfft = "6.2"
sha2 = "0.10"
candle-core = { version = "0.10.2", default-features = false }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
