[package]
name = "chew-model-qwen3-tts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Qwen3-TTS model configuration and inference for Chew TTS"

[dependencies]
chew-safetensors.workspace = true
chew-tts-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
