[package]
name = "chew-model-voxcpm2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native VoxCPM2 model inspection and inference for Chew TTS"

[dependencies]
anyhow.workspace = true
candle-core.workspace = true
chew-kernel.workspace = true
chew-model-qwen3-tts.workspace = true
chew-safetensors.workspace = true
cudarc.workspace = true
half.workspace = true
serde.workspace = true
serde_json.workspace = true
safetensors.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
