[package]
name = "chew-server"
version.workspace = true
edition.workspace = true
description = "OpenAI-compatible HTTP server"

[[bin]]
name = "chew"
path = "src/main.rs"

[dependencies]
chew-engine.workspace = true
chew-vram.workspace = true
chew-gguf.workspace = true
tokenizers.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
